--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -7,41 +7,7 @@
          data-sticky
          data-margin-top="0"
     >
-      <div>
-        <div class="clearfix">
-          <h3 class="float-left">
-            {{ user.firstname + " " + user.lastname }}
-            <small>
-              &commat; {{ user.username }}
-            </small>
-          </h3>
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li>
-              <a href="#">+</a>
-              <ul class="menu">
-                <li><a href="/profile/{{ user.id }}">View Profile</a></li>
-                <li><a href="/logout">Log out</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <div class="">
-          <div class="row">
-            <p class="column small-4"><small>TWEETS</small></p>
-            <p class="column small-4"><small>FOLLOWERS</small></p>
-            <p class="column small-4"><small>FOLLOWING</small></p>
-          </div>
-          <div class="row">
-            <p class="column small-4">{{ user.tweets_count }}</p>
-            <p class="column small-4">{{ user.followers_count }}</p>
-            <p class="column small-4">{{ user.following_count }}</p>
-          </div>
-          <div>
-            <p>
-              {{ user.description }}
-            </p>
-          </div>
-        </div>
+        {% include 'user/userInfo' %}
         <hr/>
         <div>
           <h5>New Tweet</h5>
