--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -5,7 +5,7 @@
   <section id="UserHome" class="row" data-sticky-container>
     <div id="user" class="small-12 medium-4 columns sticky"
          data-sticky
-         data-margin-top="0"
+         data-margin-top="7"
     >
         {% include 'user/userInfo' %}
         <hr/>
@@ -17,6 +17,7 @@
             {{ form.submit('Tweet', '', {class: 'button small expanded'}) }}
           {{ form.close() }}
         </div>
+          <p>&copy; 2017 - Twittah, Inc.</p>
       </div>
     </div>
       <div id="tweets" class="small-12 medium-8 columns">
