--- a/resources/views/master.njk
+++ b/resources/views/master.njk
@@ -14,9 +14,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css"/>
 </head>
 <body>
-  <br/>
-  <header class="row">
-    <nav class="">
+  <header class="">
+    <nav class="row">
       <h3 id="logo" class="small-4 columns">
         <a href="/">
           Twittah
