--- a/resources/views/user/userInfo.njk
+++ b/resources/views/user/userInfo.njk
@@ -1,4 +1,4 @@
-<div>
+<div id="userInfo">
   <div class="clearfix">
     <img id="profile-img" class="float-left" src="{{ user.profile_img_path }}" />
     <div class="float-left">
@@ -59,3 +59,4 @@
       </p>
     </div>
   </div>
+
