--- a/resources/views/user/search.njk
+++ b/resources/views/user/search.njk
@@ -23,7 +23,7 @@
               var el =
                 "<li>" +
                 "<a href='/profile/" + r[user].id + "'>"  +
-                "<img src='" + r[user].profile_img_path + "'/>" +
+                "<img class='small profile-img' src='" + r[user].profile_img_path + "'/>" +
                 r[user].firstname + " " + r[user].lastname + " " +
                 "&commat; " + r[user].username +"</a>" +
                 "</li>";
