--- a/resources/views/user/userInfo.njk
+++ b/resources/views/user/userInfo.njk
@@ -1,27 +1,18 @@
 <div id="userInfo">
   <div class="clearfix">
-    <img id="profile-img" class="float-left" src="{{ user.profile_img_path }}" />
+    <img id="" class="profile-img large float-left" src="{{ user.profile_img_path }}" />
     <div class="float-left">
       <h3>
-        {{ user.firstname + " " + user.lastname }}
+        <a href="/profile/{{ user.id }}">{{ user.firstname + " " + user.lastname }}</a>
       </h3>
       <small>
         &commat; {{ user.username }}
       </small>
     </div>
-    {#<ul class="dropdown menu" data-dropdown-menu>#}
-      {#<li>#}
-        {#<a href="#">+</a>#}
-        {#<ul class="menu">#}
-          {#<li><a href="/profile/{{ user.id }}">View Profile</a></li>#}
-          {#<li><a href="/logout">Log out</a></li>#}
-        {#</ul>#}
-      {#</li>#}
-    {#</ul>#}
     {% if currentUser.id == user.id %}
       <ul class="menu" data-dropdown-menu>
         <li>
-          <a id="widget" class="subheader" href="#"><i class="fi-widget"></i></a>
+          <a id="" class="subheader widget" href="#"><i class="fi-widget"></i></a>
           <ul class="menu vertical">
             <li>
               <a href="/profile/{{ user.id }}" class="is-dropdown-menu-parent opens-right">Profile</a>
@@ -36,22 +27,22 @@
         </li>
       </ul>
       {% elif user.isFollowed %}
-      <a class="button tiny hollow " href="#">Following</a>
-    {% else %}
-      <a href="#" class="button tiny">Follow</a>
+        <button id="btn-following" data-currentUser="{{ currentUser.id }}" data-user="{{ user.id }}" class="button tiny hollow expanded">Following</button>
+      {% else %}
+        <button id="btn-follow" data-currentUser="{{ currentUser.id }}" data-user="{{ user.id }}" class="button tiny expanded">Follow</button>
     {% endif %}
   </div>
   <br/>
   <div id="user-meta">
     <div id="headings" class="row">
-      <p class="column small-4"><small>TWEETS</small></p>
-      <p class="column small-4"><small>FOLLOWERS</small></p>
-      <p class="column small-4"><small>FOLLOWING</small></p>
+      <p class="column small-4 text-small">TWEETS</p>
+      <p class="column small-4 text-small">FOLLOWERS</p>
+      <p class="column small-4 text-small">FOLLOWING</p>
     </div>
     <div id="data" class="row">
-      <p class="column small-4">{{ user.tweets_count }}</p>
-      <p class="column small-4">{{ user.followers_count }}</p>
-      <p class="column small-4">{{ user.following_count }}</p>
+      <p class="column small-4 text-large">{{ user.tweets_count }}</p>
+      <p class="column small-4 text-large">{{ user.followers_count }}</p>
+      <p class="column small-4 text-large">{{ user.following_count }}</p>
     </div>
     <div>
       <p>
@@ -59,4 +50,29 @@
       </p>
     </div>
   </div>
+</div>
+{#<p>&copy; 2017 - Twittah, Inc.</p>#}
 
+
+  <script type="text/javascript">
+    $('#btn-follow').click(function(e){
+        var currentUser = $('#btn-follow').attr('data-currentUser');
+        var user = $('#btn-follow').attr('data-user');
+        $.ajax({
+            url: '/follow/' + user + '/' + currentUser,
+            method: 'GET'
+        }).done(function(r){
+           console.log(r);
+        });
+    });
+    $('#btn-following').click(function(e){
+      var currentUser = $('#btn-following').attr('data-currentUser');
+      var user = $('#btn-following').attr('data-user');
+      $.ajax({
+          url: '/unfollow/' + user + '/' + currentUser,
+          method: 'GET'
+      }).done(function(r){
+         console.log(r);
+      });
+    });
+  </script>
