--- a/resources/views/tweets/tweetList.njk
+++ b/resources/views/tweets/tweetList.njk
@@ -3,18 +3,25 @@
 <article>{{ tweets.message }}</article>
 {% else %}
     {% for tweet in tweets %}
-      <article class="tweet" id="{{ tweet.id }}">
-        <p class="">
-          <a href="/profile/{{ tweet.user_id }}">{{ tweet.username }}</a>
-          <small>{{ tweet.dateStr }}</small>
-          {% if tweet.created_at != tweet.updated_at %}
-            <small> Edited</small>
-          {% endif %}
-        </p>
-        <p>
-          {{ tweet.content }}
-        </p>
-        <hr/>
+      <article class="tweet clearfix" id="{{ tweet.id }}">
+          <div class="float-left">
+            <img class="profile-img medium" src="{{ user.profile_img_path }}" />
+          </div>
+          <div>
+            <p class="tweet-meta">
+              <a href="/profile/{{ tweet.user_id }}">{{ tweet.username }}</a>
+              <small>
+                {{ tweet.dateStr }}
+                {% if tweet.created_at != tweet.updated_at %}
+                  <small> Edited</small>
+                {% endif %}
+              </small>
+            </p>
+            <p class="">
+              {{ tweet.content }}
+            </p>
+          </div>
+        {#<hr/>#}
       </article>
     {% endfor %}
 {% endif %}
