following and unfollowing now work

--- a/resources/views/user/search.njk
+++ b/resources/views/user/search.njk
@@ -1,6 +1,6 @@
 {% if currentUser %}
 <div id="search-area">
-  <input type="text" id="search" name="search" placeholder="Search Twittah users"/>
+  <input type="text" id="search" name="search" placeholder="Search Twittah usernames"/>
   <div id="search-results" class="hide">
     <ul>
       {# search results pop up here #}
