file uploading functionality. displays custom profile pic. fixed interface bugs with placement and flickering

--- a/public/style.css
+++ b/public/style.css
@@ -122,9 +122,15 @@ body {
   margin: 10px;
 }
 
+#tweets{
+  min-height: 300px;
+  margin-bottom: 30px;
+}
+
 .profile-img{
   border-radius: 50px;
   border: 2px solid white;
+  background: lightcyan;
 }
 .profile-img.small{
   width: 25px;
