--- a/resources/views/scripts/foundation.njk
+++ b/resources/views/scripts/foundation.njk
@@ -10,4 +10,5 @@
   var modal = new Foundation.Reveal($('.reveal'));
   var elem = new Foundation.Sticky($('.sticky'));
   $(document).foundation();
+  $('.menu').removeClass('hide');
 </script>
