--- a/resources/views/user/userInfo.njk
+++ b/resources/views/user/userInfo.njk
@@ -13,10 +13,10 @@
       <ul class="menu" data-dropdown-menu>
         <li>
           <a id="" class="subheader widget" href="#"><i class="fi-widget"></i></a>
-          <ul class="menu vertical">
+          <ul class="menu hide vertical">
             <li>
               <a href="/profile/{{ user.id }}" class="is-dropdown-menu-parent opens-right">Profile</a>
-              <ul class="menu" data-dropdown-menu>
+              <ul class="menu hide" data-dropdown-menu>
                 <li><a href="/profile/{{ user.id }}">View profile</a></li>
                 <li><a href="/users/{{ user.id }}/edit">Edit profile</a></li>
                 <li><a href="/account/{{ user.id }}">Account Settings</a></li>
