--- a/resources/views/userIndex.njk
+++ b/resources/views/userIndex.njk
@@ -22,7 +22,7 @@
       {% include 'tweets/tweetList' %}
     </div>
   </section>
-  {% include 'scripts/foundation' %}
+  {#{% include 'scripts/foundation' %}#}
 
 
 {% endblock %}
