reactivate and deactivate user. some comments in user controller

--- a/resources/views/login.njk
+++ b/resources/views/login.njk
@@ -26,5 +26,8 @@
       <a href="/register" class="button secondary">Register</a>
     </div>
     {{ form.close() }}
+    <div>
+      <a href="/return">Returning user?</a>
+    </div>
   </section>
 {% endblock %}
