moved settings wheel up to upper right of user info

--- a/resources/views/user/profile.njk
+++ b/resources/views/user/profile.njk
@@ -4,7 +4,7 @@
   <br/>
   <section id="UserProfile" class="row" data-sticky-container>
     <div id="user"
-         class="small-12 medium-4 columns sticky"
+         class="small-4 columns sticky"
          data-sticky
          data-margin-top="6"
     >
@@ -12,7 +12,7 @@
           {% include 'user/userInfo' %}
       </div>
     </div>
-    <div id="tweets" class="small-12 medium-8 columns">
+    <div id="tweets" class="small-8 columns">
         {% include 'tweets/tweetList' %}
     </div>
   </section>
