--- a/resources/views/user/userInfo.njk
+++ b/resources/views/user/userInfo.njk
@@ -10,7 +10,7 @@
       </small>
     </div>
     {% if currentUser.id == user.id %}
-      <ul class="menu" data-dropdown-menu>
+      <ul id="user-menu" class="menu" data-dropdown-menu>
         <li>
           <a id="" class="subheader widget" href="#"><i class="fi-widget"></i></a>
           <ul class="menu hide vertical">
