--- a/public/style.css
+++ b/public/style.css
@@ -109,6 +109,12 @@ body {
   width: 90%;
   border-radius: 10px;
   box-shadow: -3px 3px 0px #7a7a7a;
+  position: relative;
+}
+#user-menu{
+  position: absolute;
+  top: -10px;
+  right: -10px;
 }
 
 #user #headings p{
